# flibusta-telegram-bot

./: .env (template)  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: .env (template)  custom_logging.py  flib.py  flibusta_bot.py  srv.py  tg_bot.py
